# lsd-slam-pangolin-gui

./: .drone.yml  .gitignore  .gitmodules  .travis.yml  Benchmarks.md  CMakeLists.txt  Doxyfile  Makefile  Performance.md  README.md  Rakefile  Sophus_test.cpp  ZED.md  conanfile.py  d2_camera.xml  d2_camera_640px.xml  d2_ex1605l3_approaching_wing_640px.conf  d2_ex1605l3_engine_one_640px.conf  d2_ex1605l3_one.conf  d2_ex1605l3_one_640px.conf  fips.yml  test_recordings.rb  wercker.yml
.docker/: Dockerfile
.rb/: docker.rb
.travis/: before_install_osx.sh  before_install_trusty.sh  build.sh  eigen-3.2.8-patch.diff  install_deps_osx.sh  install_deps_trusty.sh
calib/: zed_hd1080.calib  zed_hd720.calib  zed_vga.calib
cmake/: BuildG2O.cmake  BuildG3Log.cmake  BuildGTestLibraries.cmake  BuildGoogleSnappy.cmake  BuildLibActiveObject.cmake  BuildPangolin.cmake  FindGLM.cmake  FindTCLAP.cmake  G3Log.cmake  GoogleSnappy.cmake  Zed.cmake
doc/: CommonProblems.md  RecorderPerformance.md
doc/performance_analyses/: jetson_recorder_stats.csv  jetson_recorder_stats.ipynb
include/lsd-slam-pangolin-gui/: GUI.h  GuiKeyframe.h  Keyframe.h  PangolinOutputIOWrapper.h  StateSaver.h  TextOutputIOWrapper.h
include/lsd-slam-pangolin-gui/App/: InputThread.h  MakeInput.h
lib/: CMakeLists.txt  GUI.cpp  GUI.h  GuiKeyframe.cpp  GuiThread.cpp  Input.cpp  Input.h  InputThread.cpp  InputThread.h  Keyframe.cpp  LSD.cpp  LSD.h  LSDArgs.cpp  LSDArgs.h  LSDArgs_TCLAP.cpp  LSDArgs_TCLAP.h  PangolinOutputIOWrapper.cpp  ParseArgs.cpp  ParseArgs.h  SlamSystem.cpp  StateSaver.cpp  TextOutputIOWrapper.cpp
lib/App/: G3LogSinks.h  InputThread.cpp  InputThread.h  MakeInput.cpp  StereoInputThread.cpp  StereoInputThread.h
lib/DataStructures/: Frame.cpp
lib/DepthEstimation/: DepthMap.cpp
lib/GlobalMapping/: TrackableKeyFrameSearch.cpp
lib/Pangolin_IOWrapper/: Keyframe.h  PangolinOutput3DWrapper.cpp  PangolinOutput3DWrapper.h  PangolinOutputIOWrapper.cpp  PangolinOutputIOWrapper.h  TextOutputIOWrapper.cpp  TextOutputIOWrapper.h
lib/SlamSystem/: ConstraintSearchThread.cpp  MappingThread.h
lib/Tracking/: SE3Tracker.h
lib/active_object/: CMakeLists.txt  active.cpp  active.h  active_idle.cpp  shared_queue.h
lib/logger/: CMakeLists.txt  LogFields.h  LogReader.cpp  LogReader.h  LogWriter.cpp  LogWriter.h  RawLogReader.cpp  RawLogReader.h  active.cpp  active.h  shared_queue.h
lib/lsd_core/: CMakeLists.txt  GUI.h  SlamSystem.cpp  SlamSystem.h
lib/lsd_core/DataStructures/: CurrentKeyFrame.h  Frame.cpp  Frame.h  FrameMemory.cpp
lib/lsd_core/DepthEstimation/: DepthMap.cpp
lib/lsd_core/IOWrapper/: Timestamp.h
lib/lsd_core/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp
lib/lsd_core/SlamSystem/: ConstraintSearchThread.cpp  MappingThread.cpp  MappingThread.h  OptimizationThread.h  TrackingThread.cpp  TrackingThread.h
lib/lsd_core/Tracking/: Relocalizer.cpp  SE3Tracker.cpp  Sim3Tracker.cpp  Sim3Tracker.h  TrackingReference.cpp
lib/lsd_core/util/: Configuration.h  DataSource.h  FileUtils.cpp  G3LogSinks.h  Timer.h  Undistorter.cpp  Undistorter.h  ZedUtils.h  settings.cpp  settings.h
lib/lsd_core/util/Undistorter/: UndistorterLogger.cpp  UndistorterZED.cpp
lib/util/: DataSource.h  Undistorter.cpp  Undistorter.h  globalFuncs.cpp  settings.cpp
lsd_slam_core/src/: CMakeLists.txt  GUI.cpp  GUI.h  LSD.cpp  LSD.h  LSDGuiThread.cpp  LSDInputThread.cpp  LSDMainThread.cpp  LSD_Zed.cpp  LSD_Zed_minimal.cpp  LiveSLAMWrapper.cpp  SlamSystem.cpp  SlamSystem.h
lsd_slam_core/src/DataStructures/: CurrentKeyFrame.h  Frame.cpp  Frame.h  FramePoseStruct.cpp  FramePoseStruct.h
lsd_slam_core/src/DepthEstimation/: DepthMap.cpp  DepthMap.h
lsd_slam_core/src/GlobalMapping/: KeyFrameGraph.cpp  KeyFrameGraph.h  TrackableKeyFrameSearch.cpp  TrackableKeyFrameSearch.h
lsd_slam_core/src/IOWrapper/: Output3DWrapper.h
lsd_slam_core/src/IOWrapper/Pangolin/: PangolinOutput3DWrapper.cpp  PangolinOutput3DWrapper.h
lsd_slam_core/src/SlamSystem/: ConstraintSearchThread.h  OptimizationThread.cpp  OptimizationThread.h  TrackingThread.cpp
lsd_slam_core/src/Tracking/: Relocalizer.cpp  Relocalizer.h  SE3Tracker.cpp  SE3Tracker.h  Sim3Tracker.cpp  TrackingReference.cpp
lsd_slam_core/src/util/: Camera.h  Configuration.h  DataSource.h  FileUtils.h  G3LogSinks.h  ImageSize.h  MovingAverage.h  RawLogReader.cpp  RawLogReader.h  RollingAverage.h  Stopwatch.h  ThreadMutexObject.h  Undistorter.cpp  Undistorter.h  settings.cpp  settings.h
lsd_slam_core/src/util/Undistorter/: UndistorterLogger.cpp  UndistorterOpenCV.cpp  UndistorterPTAM.cpp  UndistorterZED.cpp
test/unit/: CMakeLists.txt  test_test.cpp
test/unit/active_object/: CMakeLists.txt  active_idle_test.cpp
tools/: CMakeLists.txt  LSD.cpp  LSD.h  LSD_stereo.cpp  ZedRecorder.cpp
tools/LSD/: InputThread.cpp
tools/ZedRecorder/: Display.h  ImageOutput.h  VideoOutput.h
